--- a/day8.html
+++ b/day8.html
@@ -7,6 +7,27 @@
     <title>Document</title>
 </head>
 <body>
+     
+    <img src = "Wiknot.png" alt = "Wiknot.png">
     
+    <nav role="navigation">
+        <div class="topnav">
+            <div>
+            <span></span>
+            <span></span>
+            <span></span>
+            <a class="active" href="http://127.0.0.1:5500/practice.html">Home</a>
+            <a href="http://127.0.0.1:5500/practice.html">News</a>
+            <a href="http://127.0.0.1:5500/practice.html">Contact</a>
+            <a href="http://127.0.0.1:5500/practice.html">About</a>
+            </div>
+        </div>
+    </nav>
+    <section>
+        section
+    </section>
+    <article>
+        Article
+    </article>
 </body>
 </html>
