--- a/day8.html
+++ b/day8.html
@@ -9,6 +9,9 @@
 </head>
 <body>
        
+    <header>
+        Wiknot
+    </header>
     <nav role="navigation">
         <div id="menuToggle">
           
