--- a/day8.html
+++ b/day8.html
@@ -35,7 +35,7 @@
         <a href = "">Product</a>
         <a href = "">Deals</a>
         <a href = "">About</a>
-        <a href = "">Contact us</a>
+        <a href = "http://127.0.0.1:5500/contactfinal.html">Contact us</a>
     </ul>
     <div class = "spacefiller">
     </div>
