--- a/contactfinal.html
+++ b/contactfinal.html
@@ -22,37 +22,29 @@
           <span></span>
        
           <ul id="menu">
-            <a href="#"><li>Home</li></a>
-            <a href="#"><li>About</li></a>
-            <a href="#"><li>Info</li></a>
-            <a href="#"><li>Contact</li></a>
+            <a href="#"><li>Shop all</li></a>
+            <a href="#"><li>Tops</li></a>
+            <a href="#"><li>Bottoms</li></a>
+            <a href="#"><li>accesories</li></a>
             <a href="" target="_blank"><li>Show me more</li></a>
           </ul>
         </div>
       </nav>
     <ul class = navbar>
-        <a class = "home" href = "">Home</a>
+        <a class = "home" href = "http://127.0.0.1:5500/homepage.html">Home</a>
         <a href = "">Product</a>
         <a href = "">Deals</a>
-        <a href = "">About</a>
+        <a href = "http://127.0.0.1:5500/aboutfinal.html">About</a>
         <a href = "">Contact us</a>
     </ul>
     <div class = "spacefiller">
     </div>
     <main>
-        <div class = "left">
-           <section>
-               my
-           </section>
-           <article>
-                name is
-            </article>
-        </div>
-        <aside>
-            l 
-            e 
-            o
-        </aside>
-       
+        <section>
+            Contact us at 1 559 903 1868
+            or leave us a email at **********@gmail.com
+            <img scr = "" href ="">
+        </section>
+    </main>   
 </body>
 </html>
