--- a/Homepage.html
+++ b/Homepage.html
@@ -39,7 +39,7 @@
     </ul>
     <div class = "spacefiller">
     </div>
-    <section img = "boxofcloths.jpg" src = "boxofcloths">
+    <section href = "boxofcloths.jpg" src = "boxofcloths.jpg">
         hello
     </section>  
 </body>
