--- a/Homepage.html
+++ b/Homepage.html
@@ -10,7 +10,8 @@
 <body>
        
     <header>
-        Wiknot
+      <img class="img" src="Wiknot2.png" alt="Wiknot clothing and accesories">
+        
     </header>
     <nav role="navigation">
         <div id="menuToggle">
@@ -39,8 +40,8 @@
     </ul>
     <div class = "spacefiller">
     </div>
-    <section href = "boxofcloths.jpg" src = "boxofcloths.jpg">
+    <section class = "clothingbox" src = "boxofcloths.jpg">
         hello
     </section>  
-</body>
+  </body>
 </html>
