--- a/contactfinal.html
+++ b/contactfinal.html
@@ -10,7 +10,7 @@
 <body>
         
     <header>
-        Wiknot
+        <img class="img" src="Wiknot2.png" alt="Wiknot clothing and accesories">
     </header>
     <nav role="navigation">
         <div id="menuToggle">
