--- a/Tops.html
+++ b/Tops.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="canonical" href="https://Wiknotapparel.com/">
-    <link rel ="stylesheet" href = "style.css">
+    <link rel ="stylesheet" href = "tops.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>website</title>
+    <title>Tops</title>
 </head>
 <body>
        
@@ -33,7 +32,7 @@
         </div>
       </nav>
     <ul class = navbar>
-        <a class = "home" href = "">Home</a>
+        <a class = "home" href = "http://127.0.0.1:5500/homepage.html">Home</a>
         <a href = "http://127.0.0.1:5500/Products.html">Product</a>
         <a href = "http://127.0.0.1:5500/deals.html">Deals</a>
         <a href = "http://127.0.0.1:5500/about.html">About</a>
