--- a/contacts.html
+++ b/contacts.html
@@ -32,9 +32,9 @@
       </nav>
     <ul class = navbar>
         <a class = "home" href = "http://127.0.0.1:5500/homepage.html">Home</a>
-        <a href = "">Product</a>
-        <a href = "">Deals</a>
-        <a href = "http://127.0.0.1:5500/aboutfinal.html">About</a>
+        <a href = "http://127.0.0.1:5500/Products.html">Product</a>
+        <a href = "http://127.0.0.1:5500/deals.html">Deals</a>
+        <a href = "http://127.0.0.1:5500/about.html">About</a>
         <a href = "">Contact us</a>
     </ul>
     <div class = "spacefiller">
