--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel ="stylesheet" href = "index.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -31,11 +32,11 @@
           </div>
         </nav>
       <ul class = navbar>
-          <a class = "home" href = "">Home</a>
-          <a href = "">Product</a>
-          <a href = "">Deals</a>
-          <a href = "http://127.0.0.1:5500/aboutfinal.html">About</a>
-          <a href = "http://127.0.0.1:5500/contactfinal.html">Contact us</a>
+          <a class = "home" href = "http://127.0.0.1:5500/homepage.html">Home</a>
+          <a href = "http://127.0.0.1:5500/Products.html">Product</a>
+          <a href = "http://127.0.0.1:5500/deals.html">Deals</a>
+          <a href = "http://127.0.0.1:5500/about.html">About</a>
+          <a href = "http://127.0.0.1:5500/contacts.html">Contact us</a>
       </ul>
       <div class = "spacefiller">
       </div>
