--- a/Homepage.html
+++ b/Homepage.html
@@ -41,14 +41,11 @@
     </ul>
     <div class = "spacefiller">
     </div>
-    <section class = "clothingbox" src = "boxofcloths.jpg">
-        hello
+    <section class="inset" >
+        <img src="greeting.jpg" alt="Hello" >
     </section>  
     
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/QOpjxhNMDoM" 
-    title="YouTube video player" frameborder="0" 
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-    allowfullscreen></iframe> 
+  
 
   </body>
 </html>
