--- a/Homepage.html
+++ b/Homepage.html
@@ -42,9 +42,15 @@
     <div class = "spacefiller">
     </div>
     <section class="inset" >
-        <img src="greeting.jpg" alt="Hello" >
+        <img src="greeting.jpg" alt="Hello" width = "700" height="525" >
     </section>  
-    
+    <article class = "inset">
+      <img src="bottomsicon.png" alt="bottoms" href="http://127.0.0.1:5500/bottoms.html" width = "220px" height="auto" >
+      <img src="topsicon.png" alt="tops" href="http://127.0.0.1:5500/Tops.html" width = "220px" height="auto" >
+      <img src="accesoriesicon.png" alt="accesories" href="http://127.0.0.1:5500/accesories.html" width = "220px" height="auto" >
+
+
+    </article>
   
 
   </body>
