--- a/Tops.html
+++ b/Tops.html
@@ -40,10 +40,22 @@
     </ul>
     <div class = "spacefiller">
     </div>
-    <section class = "clothingbox" src = "boxofcloths.jpg">
-        hello
-    </section>  
-    
+    <p class = "topsheading">
+      Tops
+    </p>
+    <article class = "inset">
+      <p><a href="http://127.0.0.1:5500/bottoms.html">
+        <img src="topsicon.png" alt="tops" width="220" height="auto">
+        </a></p>
+      <p><a href="http://127.0.0.1:5500/bottoms.html">
+        <img src="topsicon.png" alt="tops" width="220" height="auto">
+        </a></p>
+      <p><a href="http://127.0.0.1:5500/bottoms.html">
+        <img src="topsicon.png" alt="tops" width="220" height="auto">
+        </a></p>
+    </article>
+  
+
     
 
   </body>
