--- a/bottoms.html
+++ b/bottoms.html
@@ -43,7 +43,19 @@
     <section class = "clothingbox" src = "boxofcloths.jpg">
         hello
     </section>  
-    
+    <article class = "inset">
+      <p><a href="http://127.0.0.1:5500/bottoms.html">
+        <img src="bottomsicon.png" alt="bottoms" width="220" height="auto">
+        </a></p>
+      <p><a href="http://127.0.0.1:5500/bottoms.html">
+        <img src="topsicon.png" alt="tops" width="220" height="auto">
+        </a></p>
+      <p width="220" height="auto"><a href="http://127.0.0.1:5500/bottoms.html">
+        <img src="accesoriesicon.png" alt="accesories" width="220" height="auto">
+        </a></p>
+    </article>
+  
+
 
 
   </body>
