--- a/Homepage.html
+++ b/Homepage.html
@@ -45,11 +45,15 @@
         <img src="greeting.jpg" alt="Hello" width = "700" height="525" >
     </section>  
     <article class = "inset">
-      <img src="bottomsicon.png" alt="bottoms" href="http://127.0.0.1:5500/bottoms.html" width = "220px" height="auto" >
-      <img src="topsicon.png" alt="tops" href="http://127.0.0.1:5500/Tops.html" width = "220px" height="auto" >
-      <img src="accesoriesicon.png" alt="accesories" href="http://127.0.0.1:5500/accesories.html" width = "220px" height="auto" >
-
-
+      <p><a href="http://127.0.0.1:5500/bottoms.html">
+        <img src="bottomsicon.png" alt="bottoms" width="220" height="auto">
+        </a></p>
+      <p><a href="http://127.0.0.1:5500/bottoms.html">
+        <img src="topsicon.png" alt="tops" width="220" height="auto">
+        </a></p>
+      <p width="220" height="auto"><a href="http://127.0.0.1:5500/bottoms.html">
+        <img src="accesoriesicon.png" alt="accesories" width="220" height="auto">
+        </a></p>
     </article>
   
 
