--- a/Homepage.html
+++ b/Homepage.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="canonical" href="https://Wiknotapparel.com/">
     <link rel ="stylesheet" href = "style.css">
     <meta charset="UTF-8">
@@ -48,14 +49,25 @@
       <p><a href="http://127.0.0.1:5500/bottoms.html">
         <img src="bottomsicon.png" alt="bottoms" width="220" height="auto">
         </a></p>
-      <p><a href="http://127.0.0.1:5500/bottoms.html">
+      <p><a href="http://127.0.0.1:5500/tops.html">
         <img src="topsicon.png" alt="tops" width="220" height="auto">
         </a></p>
-      <p width="220" height="auto"><a href="http://127.0.0.1:5500/bottoms.html">
+      <p width="220" height="auto"><a href="http://127.0.0.1:5500/accessories.html">
         <img src="accesoriesicon.png" alt="accesories" width="220" height="auto">
         </a></p>
     </article>
-  
-
+    <footer>
+    <div class="footer">
+    <div class="row">
+    <a href="#"><i class="fa fa-instagram"></i></a>
+    </div>
+    
+    <div class="row">
+    <ul>
+    <li><a href="#">Contact us</a></li>
+    </ul>
+    </div>
+    </div>
+    </footer>
   </body>
 </html>
