--- a/Tops.html
+++ b/Tops.html
@@ -40,9 +40,9 @@
     </ul>
     <div class = "spacefiller">
     </div>
-    <p class = "topsheading">
-      Tops
-    </p>
+    <h1 class = "topheading">
+
+    </h1>
     <article class = "inset">
       <p><a href="http://127.0.0.1:5500/bottoms.html">
         <img src="topsicon.png" alt="tops" width="220" height="auto">
@@ -50,7 +50,7 @@
       <p><a href="http://127.0.0.1:5500/bottoms.html">
         <img src="topsicon.png" alt="tops" width="220" height="auto">
         </a></p>
-      <p><a href="http://127.0.0.1:5500/bottoms.html">
+      <p><a href="http://127.0.0.1:5500/tops.html">
         <img src="topsicon.png" alt="tops" width="220" height="auto">
         </a></p>
     </article>
