--- a/bottoms.html
+++ b/bottoms.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tops</title>
+    <title>Bottoms</title>
 </head>
 <body>
        
@@ -48,10 +48,10 @@
         <img src="bottomsicon.png" alt="bottoms" width="220" height="auto">
         </a></p>
       <p><a href="http://127.0.0.1:5500/bottoms.html">
-        <img src="topsicon.png" alt="tops" width="220" height="auto">
+        <img src="bottomsicon.png" alt="bottoms" width="220" height="auto">
         </a></p>
       <p width="220" height="auto"><a href="http://127.0.0.1:5500/bottoms.html">
-        <img src="accesoriesicon.png" alt="accesories" width="220" height="auto">
+        <img src="bottomsicon.png" alt="bottoms" width="220" height="auto">
         </a></p>
     </article>
   
