--- a/Tops.html
+++ b/Tops.html
@@ -22,8 +22,7 @@
           <span></span>
           <span></span>
        
-          <ul id="menu">
-            <a href="#"><li>Shop all</li></a>
+          <ul id="menu">            
             <a href="#"><li>Tops</li></a>
             <a href="http://127.0.0.1:5500/bottoms.html"><li>Bottoms</li></a>
             <a href="http://127.0.0.1:5500/accessories.html"><li>accesories</li></a>
@@ -40,14 +39,14 @@
     </ul>
     <div class = "spacefiller">
     </div>
-    <h1 class = "topheading">
-
+    <h1 >
+    TOPS
     </h1>
     <article class = "inset">
-      <p><a href="http://127.0.0.1:5500/bottoms.html">
+      <p><a href="http://127.0.0.1:5500/tops.html">
         <img src="topsicon.png" alt="tops" width="220" height="auto">
         </a></p>
-      <p><a href="http://127.0.0.1:5500/bottoms.html">
+      <p><a href="http://127.0.0.1:5500/tops.html">
         <img src="topsicon.png" alt="tops" width="220" height="auto">
         </a></p>
       <p><a href="http://127.0.0.1:5500/tops.html">
