--- a/Homepage.html
+++ b/Homepage.html
@@ -25,7 +25,6 @@
           <span></span>
        
           <ul id="menu">
-            <a href="#"><li>Shop all</li></a>
             <a href="http://127.0.0.1:5500/Tops.html"><li>Tops</li></a>
             <a href="http://127.0.0.1:5500/bottoms.html"><li>Bottoms</li></a>
             <a href="http://127.0.0.1:5500/accessories.html"><li>accesories</li></a>
@@ -59,12 +58,12 @@
     <footer>
     <div class="footer">
     <div class="row">
-    <a href="#"><i class="fa fa-instagram"></i></a>
+    <a href=""><i class="fa fa-instagram"></i></a>
     </div>
     
     <div class="row">
     <ul>
-    <li><a href="#">Contact us</a></li>
+    <li><a href="http://127.0.0.1:5500/contacts.html">Contact us</a></li>
     </ul>
     </div>
     </div>
