--- a/accessories.html
+++ b/accessories.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel ="stylesheet" href = "tops.css">
+    <link rel ="stylesheet" href = "accessories.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,7 +23,6 @@
           <span></span>
        
           <ul id="menu">
-            <a href="#"><li>Shop all</li></a>
             <a href="http://127.0.0.1:5500/Tops.html"><li>Tops</li></a>
             <a href="http://127.0.0.1:5500/bottoms.html"><li>Bottoms</li></a>
             <a href="#"><li>accesories</li></a>
@@ -40,9 +39,9 @@
     </ul>
     <div class = "spacefiller">
     </div>
-    <section class = "clothingbox" src = "boxofcloths.jpg">
-        hello
-    </section>  
+    <h1 >
+      ACCESORIES
+    </h1> 
     <article class = "inset">
       <p><a href="http://127.0.0.1:5500/accessories.html">
         <img src="accesoriesicon.png" alt="accesories" width="220" height="auto">
