--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
     </ul>
     <div class = "spacefiller">
     </div>
-    <section>
+    <section class = "inset">
         hello
     </section>
        
