--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
         </div>
       </nav>
     <ul class = navbar>
-        <a class = "home" href = "http://127.0.0.1:5500/homepage.html">Home</a>
+        <a class = "home" href = "http://127.0.0.1:5500/index.html">Home</a>
         <a href = "http://127.0.0.1:5500/Products.html">Product</a>
         <a href = "http://127.0.0.1:5500/deals.html">Deals</a>
         <a href = "">About</a>
@@ -39,8 +39,22 @@
     <div class = "spacefiller">
     </div>
     <section class = "inset">
-        hello
+      Hello, My name is Leo. This brand has always been in the back 
+      of my mind but now that I am learning the skills, 
+      I can make a website for it. This is my clothing website. 
     </section>
-       
+    <footer>
+      <div class="footer">
+      <div class="row">
+      <a href=""><i class="fa fa-instagram"></i></a>
+      </div>
+      
+      <div class="row">
+      <ul>
+      <li><a href="http://127.0.0.1:5500/contacts.html">Contact us</a></li>
+      </ul>
+      </div>
+      </div>
+      </footer>
 </body>
 </html>
