--- a/Products.html
+++ b/Products.html
@@ -31,7 +31,7 @@
         </div>
       </nav>
     <ul class = navbar>
-        <a class = "home" href = "http://127.0.0.1:5500/homepage.html">Home</a>
+        <a class = "home" href = "http://127.0.0.1:5500/index.html">Home</a>
         <a href = "">Product</a>
         <a href = "http://127.0.0.1:5500/deals.html">Deals</a>
         <a href = "http://127.0.0.1:5500/about.html">About</a>
@@ -39,10 +39,22 @@
     </ul>
     <div class = "spacefiller">
     </div>
-    <section class = "clothingbox" src = "boxofcloths.jpg">
-        hello
+    <section class = "inset">
+        Coming soon...
     </section>  
-    
+    <footer>
+      <div class="footer">
+      <div class="row">
+      <a href=""><i class="fa fa-instagram"></i></a>
+      </div>
+      
+      <div class="row">
+      <ul>
+      <li><a href="http://127.0.0.1:5500/contacts.html">Contact us</a></li>
+      </ul>
+      </div>
+      </div>
+      </footer>
 
   </body>
 </html>
