--- a/accessories.html
+++ b/accessories.html
@@ -31,7 +31,7 @@
         </div>
       </nav>
     <ul class = navbar>
-        <a class = "home" href = "http://127.0.0.1:5500/homepage.html">Home</a>
+        <a class = "home" href = "http://127.0.0.1:5500/index.html">Home</a>
         <a href = "http://127.0.0.1:5500/Products.html">Product</a>
         <a href = "http://127.0.0.1:5500/deals.html">Deals</a>
         <a href = "http://127.0.0.1:5500/about.html">About</a>
@@ -53,7 +53,19 @@
         <img src="accesoriesicon.png" alt="accesories" width="220" height="auto">
         </a></p>
     </article>
-  
+    <footer>
+      <div class="footer">
+      <div class="row">
+      <a href=""><i class="fa fa-instagram"></i></a>
+      </div>
+      
+      <div class="row">
+      <ul>
+      <li><a href="http://127.0.0.1:5500/contacts.html">Contact us</a></li>
+      </ul>
+      </div>
+      </div>
+      </footer>
 
    
 
