--- a/contacts.html
+++ b/contacts.html
@@ -30,7 +30,7 @@
         </div>
       </nav>
     <ul class = navbar>
-        <a class = "home" href = "http://127.0.0.1:5500/homepage.html">Home</a>
+        <a class = "home" href = "http://127.0.0.1:5500/index.html">Home</a>
         <a href = "http://127.0.0.1:5500/Products.html">Product</a>
         <a href = "http://127.0.0.1:5500/deals.html">Deals</a>
         <a href = "http://127.0.0.1:5500/about.html">About</a>
@@ -39,11 +39,23 @@
     <div class = "spacefiller">
     </div>
     <main>
-        <section>
-            Contact us at 1 559 903 1868
+        <section class = "inset">
+            Contact us at 1 *** *** ****
             or leave us a email at **********@gmail.com
-            <img scr = "" href ="">
         </section>
-    </main>   
+    </main>  
+    <footer>
+        <div class="footer">
+        <div class="row">
+        <a href=""><i class="fa fa-instagram"></i></a>
+        </div>
+        
+        <div class="row">
+        <ul>
+        <li><a href="http://127.0.0.1:5500/contacts.html">Contact us</a></li>
+        </ul>
+        </div>
+        </div>
+        </footer> 
 </body>
 </html>
