--- a/shopmore.html
+++ b/shopmore.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel ="stylesheet" href = "shopall.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel ="stylesheet" href = "shopmore.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,8 +27,9 @@
             <a href="#"><li>Tops</li></a>
             <a href="http://127.0.0.1:5500/bottoms.html"><li>Bottoms</li></a>
             <a href="http://127.0.0.1:5500/accessories.html"><li>accesories</li></a>
-            <a href="" target="_blank"><li>Show me more</li></a>
+            <a href="http://127.0.0.1:5500/shopmore.html" ><li>Show me more</li></a>
           </ul>
+          
         </div>
       </nav>
     <ul class = navbar>
@@ -40,7 +42,7 @@
     <div class = "spacefiller">
     </div>
     <h1 >
-    TOPS
+    SHOP MORE
     </h1>
     <article class = "inset">
       <p><a href="http://127.0.0.1:5500/tops.html">
