--- a/contacts.html
+++ b/contacts.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel = "stylesheet" href = "contactstyle.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -25,7 +26,7 @@
             <a href="http://127.0.0.1:5500/Tops.html"><li>Tops</li></a>
             <a href="http://127.0.0.1:5500/bottoms.html"><li>Bottoms</li></a>
             <a href="http://127.0.0.1:5500/accessories.html"><li>accesories</li></a>
-            <a href="" target="_blank"><li>Show me more</li></a>
+            <a href="http://127.0.0.1:5500/shopmore.html" ><li>Show me more</li></a>
           </ul>
         </div>
       </nav>
