--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>website</title>
+    <title>Home</title>
 </head>
 <body>
        
@@ -27,7 +27,7 @@
             <a href="http://127.0.0.1:5500/Tops.html"><li>Tops</li></a>
             <a href="http://127.0.0.1:5500/bottoms.html"><li>Bottoms</li></a>
             <a href="http://127.0.0.1:5500/accessories.html"><li>accesories</li></a>
-            <a href="" target="_blank"><li>Show me more</li></a>
+            <a href="http://127.0.0.1:5500/shopmore.html" ><li>Show me more</li></a>
           </ul>
         </div>
       </nav>
